[gd_scene load_steps=10 format=3 uid="uid://bin6b2ypkka84"]

[ext_resource type="Script" path="res://addons/EasyMenus/Scripts/options_menu_controller.gd" id="1_fg5gl"]
[ext_resource type="Script" path="res://addons/EasyMenus/Scripts/follow_focus_center.gd" id="2_mgdso"]
[ext_resource type="Theme" uid="uid://cls7a0y3pf2n7" path="res://themes/theme_main_menu.tres" id="3_df0ir"]
[ext_resource type="PackedScene" uid="uid://dyfwp0vhgfjd7" path="res://addons/EasyMenus/Nodes/slider_w_labels.tscn" id="3_nstew"]
[ext_resource type="Script" path="res://addons/EasyMenus/Scripts/option_button_input_propagator.gd" id="4_4kub1"]
[ext_resource type="PackedScene" uid="uid://cqniig2ks0xs2" path="res://addons/EasyMenus/Nodes/gamepad_closable.tscn" id="5_nl5i3"]
[ext_resource type="Script" path="res://scripts/ui/ButtonWithCustomCursor.gd" id="7_cai07"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tg31v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x77mt"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_df0ir")
script = ExtResource("1_fg5gl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="TextureRect" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.866667)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_mgdso")
transition_time = 0.15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="OptionsTitle" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_df0ir")
theme_override_font_sizes/font_size = 45
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_nstew")]
unique_name_in_owner = true
layout_mode = 2
title = "SFX Volume"

[node name="Title" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="0"]
text = "SFX Volume"

[node name="HSlider" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="MusicVolumeSlider" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_nstew")]
unique_name_in_owner = true
layout_mode = 2
title = "Music Volume"

[node name="Title" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="0"]
text = "Music Volume"

[node name="HSlider" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_tg31v")

[node name="FullscreenCheckButton OLD" type="CheckButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_df0ir")
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="VSyncCheckButton OLD" type="CheckButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Syncs Games Frame Rate with Displays Refresh Rate"
theme = ExtResource("3_df0ir")
theme_override_font_sizes/font_size = 25
text = "V-Sync"

[node name="VSyncCheckBox" type="CheckBox" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Syncs Games Frame Rate with Displays Refresh Rate"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "V-Sync"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
tooltip_text = "Scale Less than 1 to get performance improve. 
Scale to more than 1 to improve image quality."

[node name="RenderScaleLabel" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Render Scale"
horizontal_alignment = 1

[node name="RenderScaleSlider" type="HSlider" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_force_pass_scroll_events = false
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="RenderScaleCurrentValueLabel" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AntiAliasing2DLabel" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "2D Anti Aliasing"
horizontal_alignment = 1

[node name="AntiAliasing2DOptionButton" type="OptionButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Smooth out edges of 2D objects"
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3
script = ExtResource("4_4kub1")

[node name="GamepadClosable" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing2DOptionButton" instance=ExtResource("5_nl5i3")]

[node name="AntiAliasing3DLabel" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "3D Anti Aliasing"
horizontal_alignment = 1

[node name="AntiAliasing3DOptionButton" type="OptionButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Smooths out edges of 3D objects"
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3
script = ExtResource("4_4kub1")

[node name="GamepadClosable" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing3DOptionButton" instance=ExtResource("5_nl5i3")]

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_x77mt")

[node name="BackButton" type="Button" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Back"
script = ExtResource("7_cai07")

[connection signal="value_changed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/FullscreenCheckButton OLD" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/VSyncCheckButton OLD" to="." method="_on_v_sync_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/VSyncCheckBox" to="." method="_on_v_sync_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer/RenderScaleSlider" to="." method="_on_render_scale_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing2DOptionButton" to="." method="_on_anti_aliasing_2d_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing3DOptionButton" to="." method="_on_anti_aliasing_3d_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/BackButton" to="." method="go_back"]

[editable path="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider"]
[editable path="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider"]
